# ac-builder

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md
scripts/python/: package-lock.json  package.json  pyproject.toml
scripts/python/ac_builder/: __init__.py  builder.py  cli.py  config.py  manifest.py  parser.py  text_renderer.py
scripts/python/ac_builder/api/: __init__.py  addresses_v3.py  automations_v3.py  campaigns_v1.py  campaigns_v3.py  fields_v3.py  lists_v3.py  messages_v1.py  messages_v3.py  tags_v3.py  v1_client.py  v3_client.py
scripts/python/ac_builder/fixtures/: __init__.py
scripts/python/ac_builder/render/: __init__.py  compose.py  md_to_mjml_body.py  mjml_runner.py  theme_loader.py
scripts/python/ac_builder/validate/: __init__.py  _checks_accessibility.py  mjml_lint.py  (+3 more)
scripts/python/templates/: base.mjml  onboarding.mjml
scripts/python/tests/: test_automations_v3.py  test_banner_rotation.py  test_builder.py  test_campaigns_v1.py  test_campaigns_v3_links.py  test_cli_render_check.py  test_compose.py  test_config.py  test_link_actions_legacy.py  test_lint_skills.py  test_manifest.py  test_md_to_mjml_body.py  test_md_to_mjml_golden.py  test_messages_v1.py  test_mjml_runner.py  test_mjml_templates.py  test_parser_theme_field.py  test_parser_truncation_guard.py  test_pre_send_accessibility.py  test_pre_send_compliance.py  test_pre_send_infrastructure.py  test_pre_send_stylistic.py  test_text_renderer.py  test_theme_loader.py  test_theme_schema.py  test_themes_validate.py  test_v1_client.py  test_verify_themes_only.py
(+66 files in other folders)
